<resources>
  <string name="app_name">Night+</string>
  <string name="app_introduction_btn">开始体验</string>

  <string name="app_main_title">微信</string>
  <string name="app_main_action_group">发起群聊</string>
  <string name="app_main_action_add_friend">添加朋友</string>
  <string name="app_main_action_scan">扫一扫</string>
  <string name="app_main_action_qrCode">收付款</string>
  <string name="app_main_action_help">帮助与反馈</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="app_explores_title">市场</string>
  <string name="app_me_title">我的</string>
  <string name="app_venue_list_title">福利</string>
  <string name="app_mission_title">任务</string>
  <string name="app_me_attention">请不要透露密码、短信和谷歌验证码给任何人，包括币安的工作人员</string>
  <string name="app_me_switch">使用BNB支付交易手续费(50%折扣)</string>
  <string name="app_me_id">超级返利</string>
  <string name="app_me_level_auth">身份验证</string>


  <string name="me_wallet">钱包</string>


  <string name="explore_items_all">全部</string>
  <string name="explore_items_music">音乐</string>
  <string name="explore_items_drink">酒饮</string>
  <string name="explore_items_event">玩乐</string>
  <string name="explore_items_party">派对</string>
  <string name="explore_items_lifestyle">潮流</string>

  <string name="location_title">选择城市</string>

  <!-- ICONS -->
  <string name="ion_arrow_left">&#xf170;</string>
  <string name="ion_comment">&#xf16f;</string>
  <string name="ion_date">&#xf171;</string>
  <string name="ion_member">&#xf173;</string>
  <string name="ion_location">&#xf1ff;</string>
  <string name="ion_triangle">&#xf163;</string>
  <string name="ion_arrow_down">&#xf174;</string>
</resources>
